fix(dropdown)!: change display to inline-block to ease truncation setup (#8253)
**Related Issue:** #5903

## Summary

BREAKING CHANGE: Dropdown's default `display` was changed from
`inline-flex` to `inline-block` to make it easier to prompt truncation
in trigger button text with minimal impact to layout (by setting an
explicit width **or** setting `width: 100%` or `display: block` on the
dropdown of a width-constrained parent).

--- a/packages/calcite-components/src/components/dropdown/dropdown.scss
+++ b/packages/calcite-components/src/components/dropdown/dropdown.scss
@@ -7,7 +7,7 @@
  */
 
 :host {
-  @apply inline-flex flex-initial;
+  @apply inline-block flex-initial;
 }
 
 @include disabled();
